# bass-seq

./: .gitignore  CMakeLists.txt  README.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  release.yml
source/: GlobalSettings.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: Delay.cpp  Delay.h  Open303Voice.cpp  Open303Voice.h  Saturation.cpp  Saturation.h  VoiceAllocator.h
source/dsp/open303/: CMakeLists.txt  GlobalFunctions.h  open303_prefix.h  rosic_NumberManipulations.h  rosic_RealFunctions.h
source/sequencer/: Arpeggiator.cpp  Arpeggiator.h  Pattern.h  PatternBank.cpp  PatternBank.h  PatternCommand.h  PatternStorage.h  StepSequencer.cpp  StepSequencer.h
source/ui/: BassSeqLookAndFeel.cpp  BassSeqLookAndFeel.h  EditController.cpp  EditController.h  PadsCabinet.cpp  PadsCabinet.h  SettingsOverlay.cpp  SettingsOverlay.h
tools/: render_ui.cpp  test_editcontroller.cpp
